[gd_scene load_steps=3 format=3 uid="uid://c6cagjh7y5wn4"]

[ext_resource type="Script" uid="uid://ymic8gvhhocj" path="res://addons/parley/modals/export_to_csv_modal.gd" id="1_5mgyv"]
[ext_resource type="Texture2D" uid="uid://d4d8bblglcblx" path="res://addons/parley/assets/Folder.svg" id="2_dhe52"]

[node name="ExportToCsvModal" type="Window"]
auto_translate_mode = 1
title = "Export to CSV"
initial_position = 2
size = Vector2i(800, 400)
min_size = Vector2i(800, 400)
script = ExtResource("1_5mgyv")

[node name="ExportToCsvMarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ExportToCsvContainer" type="VBoxContainer" parent="ExportToCsvMarginContainer"]
layout_mode = 2

[node name="PathContainer" type="HBoxContainer" parent="ExportToCsvMarginContainer/ExportToCsvContainer"]
layout_mode = 2

[node name="PathLabel" type="Label" parent="ExportToCsvMarginContainer/ExportToCsvContainer/PathContainer"]
layout_mode = 2
text = "Path:"

[node name="PathEdit" type="LineEdit" parent="ExportToCsvMarginContainer/ExportToCsvContainer/PathContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "res://export/export.csv"
expand_to_text_length = true

[node name="ChoosePathButton" type="Button" parent="ExportToCsvMarginContainer/ExportToCsvContainer/PathContainer"]
layout_mode = 2
icon = ExtResource("2_dhe52")
flat = true

[node name="RichTextLabel" type="RichTextLabel" parent="ExportToCsvMarginContainer/ExportToCsvContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[color=#19e34f]
[ul]CSV path name is valid[/ul][/color][color=#19e34f]
[ul]Will export the current Dialogue Sequence to CSV[/ul][/color]
"
fit_content = true

[node name="ActionButonContainer" type="HBoxContainer" parent="ExportToCsvMarginContainer/ExportToCsvContainer"]
layout_mode = 2

[node name="CancelContainer" type="MarginContainer" parent="ExportToCsvMarginContainer/ExportToCsvContainer/ActionButonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CancelButton" type="Button" parent="ExportToCsvMarginContainer/ExportToCsvContainer/ActionButonContainer/CancelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[node name="ExportContainer" type="MarginContainer" parent="ExportToCsvMarginContainer/ExportToCsvContainer/ActionButonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExportButton" type="Button" parent="ExportToCsvMarginContainer/ExportToCsvContainer/ActionButonContainer/ExportContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Export"

[node name="ChoosePathModal" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open Dialogue / Choose Location"
initial_position = 2
size = Vector2i(1000, 750)
ok_button_text = "Open"
filters = PackedStringArray("*.ds")

[connection signal="pressed" from="ExportToCsvMarginContainer/ExportToCsvContainer/PathContainer/ChoosePathButton" to="." method="_on_choose_path_button_pressed"]
[connection signal="pressed" from="ExportToCsvMarginContainer/ExportToCsvContainer/ActionButonContainer/CancelContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="ExportToCsvMarginContainer/ExportToCsvContainer/ActionButonContainer/ExportContainer/ExportButton" to="." method="_on_export_button_pressed"]
[connection signal="file_selected" from="ChoosePathModal" to="." method="_on_choose_path_modal_file_selected"]
